Wed Jan 30 00:09:37 2008  Tanaka Akira  <akr@fsij.org>

	* enc/euc_tw.c (euctw_mbc_enc_len): validation implemented.

Tue Jan 29 22:58:11 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_enumerator.rb: add tests to achieve over 90% test
	  coverage of enumerator.c.
	* test/ruby/test_enum.rb: add for enum.c.

Tue Jan 29 22:29:48 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* enumerator.c: fix documents.

Tue Jan 29 22:27:11 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* range.c: fix SEGV by ("a" .. "z").step(2 ** 30) { }.

Tue Jan 29 21:59:16 2008  Tanaka Akira  <akr@fsij.org>

	* enc/euc_tw.c (euctw_islead): 0x8e is a leading byte.

Tue Jan 29 21:55:35 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* bignum.c: move object allocation out of blocking_region.
	  [ruby-dev:33139]

Tue Jan 29 20:37:36 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/make_transdb.rb: add for make transdb.h.

	* dmytranscode.c: add for miniruby.

	* enc/gbk.c (gbk_left_adjust_char_head, gbk_is_allowed_reverse_match):
	  fix odd regexp match. [ruby-dev:33502]

Tue Jan 29 20:17:06 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* {bcc32,win32}/Makefile.sub (MINIOBJS): add dmytranscode.$(OBJEXT).

Tue Jan 29 19:39:40 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in, common.mk: fix rule for dmytranscode.o.

Tue Jan 29 19:03:16 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/japanese.c (rb_to_Windows_31J): to 'Windows-31J'.

	* common.mk: add rules for transdb.h.

	* transcode.c (init_transcoder_table): use transdb.h.

Tue Jan 29 18:05:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (encdb_{replicate,alias,dummy,declare}): define only if
	  NO_ENCDB_H is not defined.

Tue Jan 29 17:54:11 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/gbk.c (EncLen_gbk): too short. [ruby-dev:33497]

Tue Jan 29 17:25:22 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* dmyencoding.c, encoding.c (enc_init_db, NO_ENCDB_H):
	  miniruby doesn't use encdb.

	* common.mk: encdb.h use miniruby.
