@@ -1,3 +1,8 @@
+Wed Jan 30 01:25:16 2008  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* test/ruby/test_range.rb: add tests to achieve over 90% test coverage
+	  of range.c.
+
 Wed Jan 30 00:09:37 2008  Tanaka Akira  <akr@fsij.org>
 
 	* enc/euc_tw.c (euctw_mbc_enc_len): validation implemented.
